<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F1EDED"
        tools:context=".ui.neighbour_profile.NeighbourProfileActivity">


        <ImageView
            android:id="@+id/picture"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@android:color/black"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/arrow_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/ic_arrow_back_white_24dp"/>

        <TextView
            android:id="@+id/name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="150dp"
            android:text="Prénom"
            android:textColor="@android:color/white"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/name2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="235dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/white"
            android:gravity="bottom"
            android:paddingLeft="15dp"
            android:paddingBottom="10dp"
            android:src="@drawable/gray_border"
            android:text="Prénom"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="195dp"
            android:layout_marginRight="9dp"
            app:backgroundTint="#F1EDED"
            android:src="@drawable/ic_star_border_black_24dp" />

        <TextView
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="295dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:paddingLeft="50dp"
            android:text="Ville"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/icon_Place"
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="308dp"
            android:background="@drawable/ic_place_black_24dp" />


        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="355dp"
            android:background="@android:color/white"
            android:text="Numéro de téléphone"
            android:textSize="20sp"
            android:paddingLeft="50dp"
            android:gravity="center_vertical" />

        <ImageView
            android:id="@+id/icon_Phone"
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="368dp"
            android:background="@drawable/ic_local_phone_black_24dp" />

        <TextView
            android:id="@+id/social_page"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="415dp"
            android:background="@android:color/white"
            android:text="Facebook"
            android:textSize="20sp"
            android:paddingLeft="50dp"
            android:gravity="center_vertical" />

        <ImageView
            android:id="@+id/icon_Social"
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="428dp"
            android:background="@drawable/ic_language_black_24dp" />


        <TextView
            android:id="@+id/about_me"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="490dp"
            android:text="A propos de moi"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:gravity="bottom"
            android:paddingLeft="15dp"
            android:paddingBottom="10dp"
            android:background="@android:color/white"
            android:src="@drawable/gray_border"/>

        <TextView
            android:id="@+id/messageUI"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="550dp"
            android:background="@android:color/white"
            android:text="messageUI"
            android:textSize="15sp"
            android:paddingLeft="15dp"
            android:gravity="center_vertical" />

    </FrameLayout>

</ScrollView>